      the old way of choosing between sum and mean via prepending an 'M' to the
      metric name. Strategies for combining column scores include: sum,
      arithmetic mean, geometric mean, median, Fisher Z-transform, and weighted
      means.

    o Motif comparison metrics: average log-likelihood ratio, squared Euclidean
      distance, Hellinger distance, Bhattacharyya coefficient, Itakura-Saito
      distance, Manhattan distance, lower limit average log-likelihood ratio.

    o compare_columns() utility: Compare two 1d numeric vectors using the
      comparison metrics from compare_motifs().

    o compare_motifs() option: 'output.report'. Generate an output report when
      'compare.to' is provided, showing motif alignments of top matches.

    o get_scores() utility: Extract all possible scores from a motif.

    o filter_motifs(): Filter using the 'extrainfo' slot.

    o MotifComparisonAndPvalues.pdf vignette: the comparisons and P-values
      sections have been moved from AdvancedUsage.pdf to their own vignette.
      Higher order motifs, enrichment and run_meme() usage sections have been
      moved to SequenceSearches.pdf.

MINOR CHANGES

    o Removed 'random' shuffling method.

    o Using RcppThread instead of BiocParallel in several functions:
      compare_motifs(), create_sequences(), get_bkg(), motif_pvalue(),
      scan_sequences(), shuffle_sequences(). This means parallelization can
      occur within C++ code which is much faster than having to jump between
      R and C++. Currently motif_peaks(), read_motifs() and write_motifs()
      are the only remaining functions which offer optional BiocParallel
      usage.

    o Many performance improvements to functions relying on internal C++ code.
      Several internal R functions have been replaced with C++ versions.

    o Changed behaviour of make_DBscores() and motif comparison P-values.
      Re-calculated internal P-value databases.
